--- a/TestCommon/pom.xml
+++ b/TestCommon/pom.xml
@@ -29,13 +29,33 @@
 
     <properties>
         <mockito-version>1.10.19</mockito-version>
+        <guava-version>18.0</guava-version>
+        <hamcrest-version>1.3</hamcrest-version>
+        <commons-lang3-version>3.3.2</commons-lang3-version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>nz.co.testamation</groupId>
-            <artifactId>Common</artifactId>
-            <version>1.0</version>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>${hamcrest-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>${hamcrest-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava-version}</version>
         </dependency>
 
 
