--- a/testamation-common/pom.xml
+++ b/testamation-common/pom.xml
@@ -65,9 +65,9 @@
         </dependency>
 
         <dependency>
-            <groupId>nz.co.testamation</groupId>
-            <artifactId>TestCommon</artifactId>
-            <version>1.0</version>
+            <groupId>com.github.rlon008</groupId>
+            <artifactId>testamation-test-common</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
