--- a/testamation-httpmock-jetty/pom.xml
+++ b/testamation-httpmock-jetty/pom.xml
@@ -47,9 +47,9 @@
         </dependency>
 
         <dependency>
-            <groupId>nz.co.testamation</groupId>
-            <artifactId>Core</artifactId>
-            <version>1.0</version>
+            <groupId>com.github.rlon008</groupId>
+            <artifactId>testamation-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
