--- a/testamation-httpmock-tomcat/pom.xml
+++ b/testamation-httpmock-tomcat/pom.xml
@@ -34,9 +34,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>nz.co.testamation</groupId>
-            <artifactId>Core</artifactId>
-            <version>1.0</version>
+            <groupId>com.github.rlon008</groupId>
+            <artifactId>testamation-core</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
