--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
 
     <profiles>
         <profile>
-            <id>release</id>
+            <id>ossrh-release</id>
             <build>
                 <plugins>
                     <plugin>
