--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.rlon008</groupId>
     <artifactId>testamation-parent</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <modules>
         <module>testamation-test-common</module>
