--- a/testamation-httpmock-tomcat/pom.xml
+++ b/testamation-httpmock-tomcat/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>testamation-parent</artifactId>
         <groupId>com.github.rlon008</groupId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>testamation-httpmock-tomcat</artifactId>
