--- a/testamation-common/pom.xml
+++ b/testamation-common/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>testamation-parent</artifactId>
         <groupId>com.github.rlon008</groupId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testamation-common</artifactId>
