--- a/testamation-hibernate-support/pom.xml
+++ b/testamation-hibernate-support/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>testamation-parent</artifactId>
         <groupId>com.github.rlon008</groupId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
