--- a/testamation-core/pom.xml
+++ b/testamation-core/pom.xml
@@ -21,15 +21,14 @@
     <parent>
         <artifactId>testamation-parent</artifactId>
         <groupId>com.github.rlon008</groupId>
-        <version>1.3-SNAPSHOT</version>
+        <version>1.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>testamation-core</artifactId>
-
     <properties>
-        <spring-version>4.1.6.RELEASE</spring-version>
-        <spring-boot-version>1.2.4.RELEASE</spring-boot-version>
+        <spring-version>4.3.14.RELEASE</spring-version>
+        <spring-boot-version>1.5.10.RELEASE</spring-boot-version>
         <selenium-version>2.53.1</selenium-version>
     </properties>
 
