--- a/testamation-httpmock-jetty/pom.xml
+++ b/testamation-httpmock-jetty/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>testamation-parent</artifactId>
         <groupId>com.github.rlon008</groupId>
-        <version>1.3-SNAPSHOT</version>
+        <version>1.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>testamation-httpmock-jetty</artifactId>
